// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeDefined should return false for boolean with isNot true 1`] = `
Object {
  "message": "    
    expect([32mexpected[39m).not.toBeDefined()
    
    [1mexpected[22m should not have a defined value. (equal to [1mundefined[22m or [1mnull[22m).
    got: '[31mobject[39m'
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for null 1`] = `
Object {
  "message": "    
    expect([32mexpected[39m).toBeDefined()
    
    [1mexpected[22m should have a defined value. (different than [1mundefined[22m or [1mnull[22m).
    got: '[31mnull[39m'
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for undefined 1`] = `
Object {
  "message": "    
    expect([32mexpected[39m).toBeDefined()
    
    [1mexpected[22m should have a defined value. (different than [1mundefined[22m or [1mnull[22m).
    got: '[31mundefined[39m'
",
  "pass": false,
}
`;
